--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,12 +2,16 @@ project:
   type: website
 
 website:
-  title: "jeswheel.github.io"
+  title: "Jesse Wheeler"
   navbar:
     left:
       - href: index.qmd
         text: Home
-      - about.qmd
+      - href: texDocs/cv.pdf
+        text: CV
+      - href: texDocs/researchStatement.pdf
+        text: Research Statement
+      # - about.qmd
 
 format:
   html:
