--- a/_quarto.yml
+++ b/_quarto.yml
@@ -15,7 +15,9 @@ website:
 
 format:
   html:
-    theme: cosmo
+    theme:
+      dark: darkly
+      light: cerulean
     css: styles.css
     toc: true
 
