--- a/_quarto.yml
+++ b/_quarto.yml
@@ -16,8 +16,8 @@ website:
 format:
   html:
     theme:
+      light: flatly
       dark: darkly
-      light: cerulean
     css: styles.css
     toc: true
 
